Implement shape update over Command pattern